--- a/gulp/package.json
+++ b/gulp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lostgrid-scss",
+  "name": "lostgrid-gulp",
   "description": "An example project for using LostGrid with Gulp",
   "author": "Peter Ramsing <hi@peterramsing.com>",
   "license": "MIT",
